--- a/chromecast/receiver.css
+++ b/chromecast/receiver.css
@@ -1,5 +1,9 @@
-#topleft {
+.corner {
 	position: absolute;
+	background-size: cover;
+}
+
+#topleft {
 	left: 0;
 	right: 50%;
 	top: 0;
@@ -7,7 +11,6 @@
 }
 
 #topright {
-	position: absolute;
 	left: 50%;
 	right: 0;
 	top: 0;
@@ -15,7 +18,6 @@
 }
 
 #btmleft {
-	position: absolute;
 	left: 0;
 	right: 50%;
 	top: 50%;
@@ -23,7 +25,6 @@
 }
 
 #btmright {
-	position: absolute;
 	left: 50%;
 	right: 0;
 	top: 50%;
