title and password can now be displayed on screen

--- a/chromecast/receiver.css
+++ b/chromecast/receiver.css
@@ -9,6 +9,18 @@
 	color: white;
 }
 
-#password {
+#title {
+	left: 0;
+	width: 50%;
+	top: 0;
+	height: 5%;
+	color: white;
+}
 
+#password {
+	left: 50%;
+	width: 50%;
+	top: 0;
+	height: 5%;
+	color: white;
 }
