--- a/chromecast/receiver.css
+++ b/chromecast/receiver.css
@@ -14,16 +14,19 @@
 	left: 0;
 	width: 50%;
 	top: 0;
-	height: 5%;
 	color: white;
 }
 
 #password {
+	text-align: right;
 	font-size: 20pt;
 	left: 50%;
 	width: 50%;
 	top: 0;
-	height: 5%;
 	color: white;
 	float: right;
+}
+
+#info {
+	height: 8%;
 }
