--- a/chromecast/receiver.css
+++ b/chromecast/receiver.css
@@ -3,7 +3,7 @@
 	background-size: contain;
 	background-repeat: no-repeat; 
 	background-position: center;
-	padding: 8px;
+	margin: 8px;
 }
 
 .cell-text {
