--- a/chromecast/receiver.css
+++ b/chromecast/receiver.css
@@ -3,7 +3,6 @@
 	background-size: contain;
 	background-repeat: no-repeat; 
 	background-position: center;
-	margin: 8px;
 }
 
 .cell-text {
@@ -45,8 +44,9 @@
 
 #footer {
 	z-index: -1000;
-	font-size: 0.8em;
+	font-size: 0.7em;
 	position: fixed;
 	bottom: 4px;
-	color: rgba(255,255,255,0.4);
+	color: rgba(255,255,255,0.6);
+	text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
 }
