--- a/Chipmunk/Chipmunk/CHPostContentView.xib
+++ b/Chipmunk/Chipmunk/CHPostContentView.xib
@@ -6,12 +6,14 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CHPostContentViewController" customModule="Chipmunk" customModuleProvider="target">
             <connections>
                 <outlet property="sendButton" destination="nsR-iD-pw7" id="isB-lp-mzr"/>
+                <outlet property="sendImageButton" destination="eK6-I6-ho5" id="mse-Od-dOy"/>
                 <outlet property="textView" destination="vdo-A5-SOY" id="Kom-BE-jiU"/>
                 <outlet property="view" destination="iN0-l3-epB" id="fFd-sz-5pg"/>
             </connections>
@@ -43,7 +45,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nsR-iD-pw7">
-                    <rect key="frame" x="20" y="260" width="335" height="40"/>
+                    <rect key="frame" x="20" y="260" width="147.5" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="ui9-vq-J0t"/>
                     </constraints>
@@ -54,15 +56,30 @@
                         <action selector="sendPressed" destination="-1" eventType="touchUpInside" id="OKn-7f-e5i"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eK6-I6-ho5" userLabel="Send Image Button">
+                    <rect key="frame" x="207.5" y="260" width="147.5" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="PFp-fT-p0F"/>
+                    </constraints>
+                    <state key="normal" title="Send Image">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="sendImagePressed:" destination="-1" eventType="touchUpInside" id="yBE-b0-3eh"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.26666666666666666" green="0.26666666666666666" blue="0.26666666666666666" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="eK6-I6-ho5" firstAttribute="top" secondItem="wyl-cz-E6B" secondAttribute="bottom" constant="40" id="3gZ-uL-sYJ"/>
                 <constraint firstItem="wyl-cz-E6B" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="6qz-e1-mVG"/>
-                <constraint firstItem="nsR-iD-pw7" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailing" constant="-20" id="FEx-MY-RUF"/>
                 <constraint firstItem="wyl-cz-E6B" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="G2q-NO-WIl"/>
                 <constraint firstItem="nsR-iD-pw7" firstAttribute="top" secondItem="wyl-cz-E6B" secondAttribute="bottom" constant="40" id="Hm5-rj-GF8"/>
                 <constraint firstItem="nsR-iD-pw7" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="OZl-sG-Tma"/>
+                <constraint firstItem="nsR-iD-pw7" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.5" constant="-40" id="blg-He-btW"/>
+                <constraint firstItem="eK6-I6-ho5" firstAttribute="width" secondItem="nsR-iD-pw7" secondAttribute="width" id="fZZ-V4-9Y6"/>
                 <constraint firstItem="wyl-cz-E6B" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailing" constant="-20" id="giU-59-veJ"/>
+                <constraint firstAttribute="trailing" secondItem="eK6-I6-ho5" secondAttribute="trailing" constant="20" id="qku-ZM-iff"/>
             </constraints>
         </view>
     </objects>
